Project

General

Profile

Actions

Bug #49690

closed

Compression hints are not sent to OSD when object-map is enabled and object may exist

Added by Jason Dillaman about 3 years ago. Updated almost 3 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Jason Dillaman
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
octopus,pacific
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

If the allocation hint is enabled, the write-hints should be included.

template <typename I>
void AbstractObjectWriteRequest<I>::add_write_hint(
    neorados::WriteOp *wr) {
  I *image_ctx = this->m_ictx;
  std::shared_lock image_locker{image_ctx->image_lock};
  if (image_ctx->object_map == nullptr || !this->m_object_may_exist) {
    ObjectRequest<I>::add_write_hint(*image_ctx, wr);
  }
}

Related issues 2 (0 open2 closed)

Copied to rbd - Backport #49772: octopus: Compression hints are not sent to OSD when object-map is enabled and object may existResolvedsinguliere _Actions
Copied to rbd - Backport #49773: pacific: Compression hints are not sent to OSD when object-map is enabled and object may existResolvedsinguliere _Actions
Actions #1

Updated by Jason Dillaman about 3 years ago

  • Status changed from New to In Progress
  • Assignee set to Jason Dillaman
Actions #2

Updated by Jason Dillaman about 3 years ago

  • Status changed from In Progress to Fix Under Review
  • Pull request ID set to 40050
Actions #3

Updated by Mykola Golub about 3 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Backport Bot about 3 years ago

  • Copied to Backport #49772: octopus: Compression hints are not sent to OSD when object-map is enabled and object may exist added
Actions #5

Updated by Backport Bot about 3 years ago

  • Copied to Backport #49773: pacific: Compression hints are not sent to OSD when object-map is enabled and object may exist added
Actions #6

Updated by Loïc Dachary almost 3 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF