librbd/io: send alloc_hint when compression hint is set

Previously the hint would not be set if the object map indicated the
object may exist.

Fixes: https://tracker.ceph.com/issues/49690
Signed-off-by: Jason Dillaman <dillaman@redhat.com>
(cherry picked from commit b52b5fe06d1f88130b72b8357dbf5630c7cf1cbd)